--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -105,18 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "class hadronFunc(object):\n",
     "    def __init__(self, kperp2avg=.57, pperp2avg=.12, pdfset='JAM19PDF_proton_nlo',\n",
-    "                 ff_pion='JAM19FF_pion_nlo', ff_kaon='JAM19FF_kaon_nlo', QQ=10):\n",
+    "                 ff_pion='JAM19FF_pion_nlo', ff_kaon='JAM19FF_kaon_nlo'):\n",
     "        \n",
     "        self.pdfData = lhapdf.mkPDF(pdfset)\n",
     "        self.ffData = lhapdf.mkPDF(ff_pion, 0)\n",
     "        # needs to be extended to generalize for kaons\n",
-    "        self.QQ = QQ\n",
     "        self.kperp2avg = kperp2avg\n",
     "        self.pperp2avg = pperp2avg\n",
     "        self.eu = 2/3\n",
@@ -128,11 +127,11 @@
     "        self.e = 1/137\n",
     "    \n",
     "\n",
-    "    def pdf(flavor, x):\n",
-    "        return np.array([self.pdfData.xfxQ2(flavor, ax, self.QQ) for ax in x])\n",
+    "    def pdf(flavor, x, QQ):\n",
+    "        return np.array([self.pdfData.xfxQ2(flavor, ax, qq) for ax, qq in zip(x, QQ)])\n",
     "    \n",
-    "    def ff(flavor, z):\n",
-    "        return np.array([self.ffData.xfxQ2(flavor, az, self.QQ) for az in z])\n",
+    "    def ff(flavor, z, QQ):\n",
+    "        return np.array([self.ffData.xfxQ2(flavor, az, qq) for az, qq in zip(z, QQ)])\n",
     "    \n",
     "    \n",
     "    def A0(z, pht, m1):\n",
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
