--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,11 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class hadronFunc(object):\n",
+    "class Hadron(object):\n",
     "    def __init__(self, kperp2avg=.57, pperp2avg=.12, pdfset='JAM19PDF_proton_nlo',\n",
     "                 ff_pion='JAM19FF_pion_nlo', ff_kaon='JAM19FF_kaon_nlo', QQ=10):\n",
     "        \n",
@@ -128,17 +128,17 @@
     "        self.e = 1/137\n",
     "    \n",
     "\n",
-    "    def pdf(flavor, x):\n",
+    "    def pdf(self, flavor, x):\n",
     "        return np.array([self.pdfData.xfxQ2(flavor, ax, self.QQ) for ax in x])\n",
     "    \n",
-    "    def ff(flavor, z):\n",
+    "    def ff(self, flavor, z):\n",
     "        return np.array([self.ffData.xfxQ2(flavor, az, self.QQ) for az in z])\n",
     "    \n",
     "    \n",
-    "    def A0(z, pht, m1):\n",
-    "        ks2avg = self.kperp2avg*m1^2/(m1^2 + self.kperp2avg)\n",
-    "        topfirst = (np.square(z)*self.kperp2avg + self.pperp2avg)*kperp2avg^2\n",
-    "        bottomfirst = (np.square(z)*ks2avg + self.pperp2avg) * kperp2avg^2\n",
+    "    def A0(self, z, pht, m1):\n",
+    "        ks2avg = self.kperp2avg*m1**2/(m1**2 + self.kperp2avg)\n",
+    "        topfirst = (np.square(z)*self.kperp2avg + self.pperp2avg)*self.kperp2avg**2\n",
+    "        bottomfirst = (np.square(z)*ks2avg + self.pperp2avg) * self.kperp2avg**2\n",
     "        exptop = np.square(pht) * np.square(z) * (ks2avg - self.kperp2avg)\n",
     "        expbottom = (np.square(z)*ks2avg + self.pperp2avg) * (np.square(z)*self.kperp2avg + self.pperp2avg)\n",
     "        last = np.sqrt(2*self.e) * z * pht / m1\n",
@@ -146,10 +146,10 @@
     "        return (topfirst/bottomfirst) * np.exp(-exptop/expbottom) * last\n",
     "    \n",
     "    \n",
-    "    def NN(x, n, a, b):\n",
-    "        return n*np.power(x, a) * np.power(1 - x, b) * (((a + b)^(a + b))/(a^a * b^b))\n",
+    "    def NN(self, x, n, a, b):\n",
+    "        return n*np.power(x, a) * np.power(1 - x, b) * (((a + b)**(a + b))/(a**a * b**b))\n",
     "\n",
-    "    def NNanti(x, n):\n",
+    "    def NNanti(self, x, n):\n",
     "        return n\n",
     "            \n",
     "    \n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,60 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.power()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.square(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 6])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([1, 2, 3])* np.array([1, 1, 2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class piplus(hadronFunc):\n",
+    "class PiPlus(Hadron):\n",
     "    def __init__(self, kperp2avg=.57, pperp2avg=.12, pdfset='JAM19PDF_proton_nlo',\n",
     "                 ff_pion='JAM19FF_pion_nlo', QQ=10):\n",
     "        \n",
@@ -233,11 +184,130 @@
     "        z = kins[:, 1]\n",
     "        pht = kins[:, 2]\n",
     "        a0 = self.A0(z, pht, m1)\n",
-    "        topleft = self.NN(x, Nu, au, bu) * self.eu^2 * self.pdf(2, x) * self.ff(2, z)\n",
-    "        topright = self.NNanti(x, Ndbar) * self.edbar^2 * self.pdf(-1, x) * self.ff(-1, z)\n",
-    "        bottomleft = self.eu^2 * self.pdf(2, x) * self.ff(2, z)\n",
-    "        bottomright = self.edbar^2 * self.pdf(-1, x) * self.ff(-1, z)\n",
+    "        topleft = self.NN(x, Nu, au, bu) * self.eu**2 * self.pdf(2, x) * self.ff(2, z)\n",
+    "        topright = self.NNanti(x, Ndbar) * self.edbar**2 * self.pdf(-1, x) * self.ff(-1, z)\n",
+    "        bottomleft = self.eu**2 * self.pdf(2, x) * self.ff(2, z)\n",
+    "        bottomright = self.edbar**2 * self.pdf(-1, x) * self.ff(-1, z)\n",
     "        return a0*((topleft + topright)/(bottomleft + bottomright))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip = PiPlus()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 4, 9])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([1, 2, 3])**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('COMPASS_d_2009.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipdata = df.loc[df['hadron'] == 'pi+', :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kins = np.array(pipdata[['x', 'z', 'phT']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00307976, 0.00429643, 0.0059507 , 0.00748906, 0.01047004,\n",
+       "       0.01519049, 0.01977303, 0.0198893 , 0.00453345, 0.00530429,\n",
+       "       0.00543865, 0.00576814, 0.00688007, 0.00857435, 0.01127992,\n",
+       "       0.01638525, 0.02574682, 0.0018364 , 0.00305678, 0.00440506,\n",
+       "       0.00601993, 0.0082816 , 0.01175141, 0.01877372, 0.03707232,\n",
+       "       0.19386578])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pip.sivers(kins, 1., 1., 1., 1., 1., 1., 1.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1"
    ]
   },
   {
@@ -250,7 +320,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py38Root",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -264,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
