--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -318,6 +318,376 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Function testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ishara"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ks2Avg(m1,kperp2Avg):\n",
+    "    test_ks2Avg=((m1**2)*kperp2Avg)/((m1**2)+kperp2Avg)\n",
+    "    return test_ks2Avg\n",
+    "\n",
+    "def A0(z,pht,m1,kperp2Avg,pperp2Avg,eCharg):\n",
+    "    tempA0part1=(((z**2)*kperp2Avg+pperp2Avg)*((ks2Avg(m1,kperp2Avg))**2))/((((z**2)*(ks2Avg(m1,kperp2Avg))+pperp2Avg))*kperp2Avg**2)\n",
+    "    tempA0part21=(pht**2)*(z**2)*(ks2Avg(m1,kperp2Avg) - kperp2Avg)\n",
+    "    tempA0part22=((z**2)*(ks2Avg(m1,kperp2Avg))+pperp2Avg)*((z**2)*kperp2Avg+pperp2Avg)\n",
+    "    tempA0part2=np.exp(-tempA0part21/tempA0part22)\n",
+    "    tempA0part3=(np.sqrt(2*eCharg))*z*pht/m1\n",
+    "    tempA0=tempA0part1*tempA0part2*tempA0part3\n",
+    "    return tempA0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0006210773138177469\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A0(0.2, 0.3, 1, 2.5, 1.5, 1/137))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nick"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "had = functions.Hadron(kperp2avg=2.5, pperp2avg=1.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0006210773138177469\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(had.A0(.2, .3, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ishara"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def NNu(x,Nu,alphau,betau):\n",
+    "    tempNNu = Nu*(x**alphau)*((1-x)**(betau))*((alphau+betau)**(alphau+betau))/((alphau**alphau)*(betau**betau))\n",
+    "    return tempNNu\n",
+    "\n",
+    "def NNubar(x,Nubar,alphaubar=0,betaubar=0):\n",
+    "    #tempNNubar = Nubar*(x**alphaubar)*((1-x)**(betaubar))*((alphaubar+betaubar)**(alphaubar+betaubar))/((alphaubar**alphaubar)*(betaubar**betaubar))\n",
+    "    tempNNubar = Nubar\n",
+    "    return tempNNubar\n",
+    "\n",
+    "def NNd(x,Nd,alphad,betad):\n",
+    "    tempNNd = Nd*(x**alphad)*((1-x)**(betad))*((alphad+betad)**(alphad+betad))/((alphad**alphad)*(betad**betad))\n",
+    "    return tempNNd\n",
+    "\n",
+    "def NNdbar(x,Ndbar,alphadbar=0,betadbar=0):\n",
+    "    #tempNNdbar = Ndbar*(x**alphadbar)*((1-x)**(betadbar))*((alphadbar+betadbar)**(alphadbar+betadbar))/((alphadbar**alphadbar)*(betadbar**betadbar))\n",
+    "    tempNNdbar = Ndbar\n",
+    "    return tempNNdbar\n",
+    "\n",
+    "def NNs(x,Ns,alphas,betas):\n",
+    "    #tempNNu = Ns*(x**alphas)*((1-x)**(betas))*((alphas+betas)**(alphas+betas))/((alphas**alphas)*(betas**betas))\n",
+    "    tempNNs = 0\n",
+    "    return tempNNs\n",
+    "\n",
+    "def NNsbar(x,Nsbar,alphasbar,betasbar):\n",
+    "    #tempNNsbar = Nsbar*(x**alphasbar)*((1-x)**(betasbar))*((alphasbar+betasbar)**(alphasbar+betasbar))/((alphasbar**alphasbar)*(betasbar**betasbar))\n",
+    "    tempNNsbar = 0\n",
+    "    return tempNNsbar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NNu(2, 2, 2, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nick"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic = {'a': 1, 'b':2, 'c':3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[dic[x] for x in ['a', 'b']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "128.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(had.NN(2, 2, 2, 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PiPlus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ishara"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.0623623445743228e-07"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import lhapdf\n",
+    "\n",
+    "def xFxQ2(dataset,flavor,x,QQ):\n",
+    "    temp_parton_dist_x=(dataset.xfxQ2(flavor, x, QQ))\n",
+    "    return temp_parton_dist_x\n",
+    "\n",
+    "def zFzQ(dataset,flavor,zz,QQ):\n",
+    "    # Here \"0\" represents the central values from the girds\n",
+    "    temp_zD1=lhapdf.mkPDF(dataset[0], 0)\n",
+    "    zD1_vec=(temp_zD1.xfxQ2(flavor,zz,QQ))\n",
+    "    return zD1_vec\n",
+    "\n",
+    "\n",
+    "\n",
+    "def ASivPiP(x,z,pht,m1,kperp2Avg,pperpAvg,eCharg,eu,edbar,Nu,alphau,betau,Ndbar,QQ):\n",
+    "    Ucontribution1 = NNu(x,Nu,alphau,betau)*(eu**2)*xFxQ2(PDFdataset,2,x,QQ)*zFzQ(FF_pion_dataset,2,z,QQ)\n",
+    "    dbarcontribution1 = NNdbar(x,Ndbar)*(edbar**2)*xFxQ2(PDFdataset,-1,x,QQ)*zFzQ(FF_pion_dataset,-1,z,QQ)\n",
+    "    Ucontribution2 = (eu**2)*xFxQ2(PDFdataset,2,x,QQ)*zFzQ(FF_pion_dataset,2,z,QQ)\n",
+    "    dbarcontribution2 = (edbar**2)*xFxQ2(PDFdataset,-1,x,QQ)*zFzQ(FF_pion_dataset,-1,z,QQ)\n",
+    "    tempNumerator = Ucontribution1 + dbarcontribution1\n",
+    "    tempDenominator = Ucontribution2 + dbarcontribution2\n",
+    "    tempASivPiP = A0(z,pht,m1,kperp2Avg,pperpAvg,eCharg)*tempNumerator/tempDenominator\n",
+    "    return tempASivPiP\n",
+    "\n",
+    "Datafile='Data/HERMES_p_2009.csv'\n",
+    "PDFdataset = lhapdf.mkPDF(\"JAM19PDF_proton_nlo\")\n",
+    "FF_pion_dataset=[\"JAM19FF_pion_nlo\"]\n",
+    "\n",
+    "M1=np.sqrt(0.8)\n",
+    "Kp2A=0.57\n",
+    "Pp2A=0.12\n",
+    "ee=1/137\n",
+    "eU=2/3\n",
+    "eDbar=1/3\n",
+    "AlphaU=1.0\n",
+    "BetaU=6.6\n",
+    "NU=0.18\n",
+    "NDbar=-0.06\n",
+    "\n",
+    "\n",
+    "ASivPiP(0.9,0.234,0.346,M1,Kp2A,Pp2A,ee,eU,eDbar,NU,AlphaU,BetaU,NDbar,2.423)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nick"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip = functions.PiPlus()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kins = np.array([[0.9,0.234,0.346, 2.423]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.06236234e-07])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pip.sivers(kins, 0.18, 1., 6.6, -.06, np.sqrt(.8))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
