--- a/Nick/NeuralNetNN.ipynb
+++ b/Nick/NeuralNetNN.ipynb
@@ -1219,13 +1219,7 @@
       "12/12 [==============================] - 0s 23ms/step - loss: 0.0625 - val_loss: 0.0029\n",
       "Epoch 81/200\n",
       "12/12 [==============================] - 0s 13ms/step - loss: 0.0663 - val_loss: 0.0029\n",
-      "Epoch 82/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 82/200\n",
       "12/12 [==============================] - 0s 40ms/step - loss: 0.0630 - val_loss: 0.0029\n",
       "Epoch 83/200\n",
       "12/12 [==============================] - 0s 17ms/step - loss: 0.0711 - val_loss: 0.0029\n",
@@ -1812,13 +1806,7 @@
       "3/3 [==============================] - 0s 64ms/step - loss: 0.0279 - val_loss: 0.0013\n",
       "Epoch 82/200\n",
       "3/3 [==============================] - 0s 55ms/step - loss: 0.0337 - val_loss: 0.0013\n",
-      "Epoch 83/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 83/200\n",
       "3/3 [==============================] - 0s 111ms/step - loss: 0.0256 - val_loss: 0.0013\n",
       "Epoch 84/200\n",
       "3/3 [==============================] - 0s 116ms/step - loss: 0.0279 - val_loss: 0.0013\n",
@@ -4027,7 +4015,9 @@
    "cell_type": "code",
    "execution_count": 367,
    "id": "wrong-depth",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4258,14 +4248,6 @@
    "source": [
     "nn(sivModel, X['x'], 'nns')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "postal-pastor",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -4284,7 +4266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
